manifests/helsinki/deployment-helsinki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server-helsinki
  namespace: tests
spec:
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
      - name: echo-server
        image: ealen/echo-server:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        - containerPort: 8080
