manifests/helsinki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: tests
spec:
  selector:
    app: echo-server
  ports:
  - port: 8080
    targetPort: 80
